MFC r367120: Check for process group change in tty_wait_background().

PR:	250701